# sim2real-robot

./: LICENSE  README.md  pyproject.toml
policies/: robot_policy.onnx
src/sim2real_robot/: __init__.py  robot_control_gpio.py  robot_control_interfaces.py  robot_control_sim.py  run.py  run_robot.py
src/sim2real_robot/hardware/: imu.py  motor.py
src/sim2real_robot/helper/: onnx_infer.py
src/spikes/: read_mpu.py  run_motor.py
