[project]
name = "sim2real-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jakobleander", email = "Jakob.leander@gmail.com" }
]
requires-python = "==3.11.2"
dependencies = [
    "adafruit-circuitpython-bno055>=1.0.0",
    "rpi-gpio>=0.7.1",
]

[project.scripts]
sim2real-robot = "sim2real_robot:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
